# stars

./: README.md  SUMMARY  article_metadata_collector.py  arxiv_metadata.json  arxiv_metadata_collector.py  asset-manifest.json  config.yaml  github_stars.json  index.html  package-lock.json  package.json  pyproject.toml  scrape_stars.py  update_star_lists.py  utils.py
.github/workflows/: build_readme.yml  collect_article_metadata.yaml  collect_arxiv_metadata.yaml  convert_arxiv_urls_to_ids.yaml  deploy-to-gh-pages.yml  fix_arxiv_categories.yaml  generate-package-lock.yml  generate_summaries.yml  main.yml  update_star_lists.yml
SUMMARIES/: PYTHON.md
docs/readme/: SUMMARY  base.md.j2
docs/readme/sections/: SUMMARY  structure.md.j2
github/workflows/: SUMMARY
public/: SUMMARY  index.html
scripts/: SUMMARY  convert_arxiv_urls_to_ids.py  generate-package-lock.js  transform_categories.py
src/: App.js  Dashboard.css  Dashboard.js  README.md  SUMMARY  index.css
src/components/: AdvancedSearch.js  AdvancedSearchCondition.js  ArXivBadge.js  Dashboard.js  ExpandedRepoView.js  SUMMARY  SortDropdown.js
src/hooks/: SUMMARY  useRepositories.js
src/utils/: SUMMARY  arxivUtils.js  sortUtils.js
static/css/: main.f7908cb7.css  main.f7908cb7.css.map  main.fcf60a2d.css  main.fcf60a2d.css.map
static/js/: main.80c88bb4.js  main.80c88bb4.js.map  main.b2d8bcba.js  main.b2d8bcba.js.map  main.b3b07da0.js  main.b3b07da0.js.map  main.fa86e5ce.js  main.fa86e5ce.js.map
tests/: SUMMARY  test_article_metadata_collector.py  test_scrape.py
